<?xml version="1.0" encoding="utf-8"?>
<ntou.project.djidrone.view.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_virtual_stick_enable"
                style="@style/TextColor.InfoText"
                android:text="@string/virtual_stick_enable" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_virtual_stick_enable"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_virtual_stick_state"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_virtual_stick_state"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_active_track_enable"
                style="@style/TextColor.InfoText"
                android:text="@string/active_track_enable" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_active_track_enable"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_active_track_state"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_active_track_state"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_go_home_height_info"
                style="@style/TextColor.InfoText"
                android:text="@string/go_home_height_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_go_home_height_info"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_rth_height"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:hint="(20~100m)"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    style="@style/TextColor.SwitchText"
                    android:text="Meters"
                    android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/controller"
            android:textSize="30sp" />
    </LinearLayout>
</ntou.project.djidrone.view.MyScrollView>