<?xml version="1.0" encoding="utf-8"?>
<ntou.project.djidrone.view.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_live_stream_info"
                style="@style/TextColor.InfoText"
                android:text="@string/live_stream_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_live_stream_info"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_live_stream"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_live_stream"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/view_partition" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_web_socket_info"
                style="@style/TextColor.InfoText"
                android:text="@string/web_socket_info" />

            <LinearLayout
                android:id="@+id/linear_web_socket"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_web_socket_info"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_web_socket"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_web_socket"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_web_socket_test"
                android:layout_below="@id/linear_web_socket"
                style="@style/TextColor.InfoText"
                android:text="@string/app_name"/>

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_gesture_mode_info"
                style="@style/TextColor.InfoText"
                android:text="@string/gesture_mode_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_gesture_mode_info"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gesture_mode"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_gesture_mode"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_below="@id/tv_gesture_mode_info"-->
            <!--                android:gravity="center"-->
            <!--                android:orientation="horizontal">-->

            <!--                <Switch-->
            <!--                    android:id="@+id/sw_gesture_mode"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="50dp"-->
            <!--                    android:checked="false"-->
            <!--                    android:gravity="center_vertical"-->
            <!--                    android:switchMinWidth="50dp"-->
            <!--                    android:textOff=""-->
            <!--                    android:textOn=""-->
            <!--                    android:text="@string/close"-->
            <!--                    android:textColor="@color/colorTextMobile"-->
            <!--                    android:paddingHorizontal="20dp"-->
            <!--                    android:track="@drawable/switch_selector" />-->
            <!--            </LinearLayout>-->

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_retreat_info"
                style="@style/TextColor.InfoText"
                android:text="@string/retreat_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_retreat_info"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_retreat"
                    style="@style/TextColor.SwitchText"
                    android:text="@string/close" />

                <Switch
                    android:id="@+id/sw_retreat"
                    style="@style/Switch"
                    android:checked="false" />
            </LinearLayout>

        </RelativeLayout>

        <include layout="@layout/view_partition" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <TextView-->
        <!--                android:id="@+id/tv_recommended_configuration_info"-->
        <!--                style="@style/TextColor.InfoText"-->
        <!--                android:text="@string/recommended_configuration_info"-->
        <!--                android:layout_height="wrap_content"/>-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="40dp"-->
        <!--                android:layout_below="@id/tv_recommended_configuration_info"-->
        <!--                android:gravity="center"-->
        <!--                android:orientation="horizontal">-->

        <!--                <TextView-->
        <!--                    android:id="@+id/tv_recommended_configuration"-->
        <!--                    style="@style/TextColor.SwitchText"-->
        <!--                    android:text="@string/close" />-->

        <!--                <Switch-->
        <!--                    android:id="@+id/sw_recommended_configuration"-->
        <!--                    style="@style/Switch"-->
        <!--                    android:checked="false" />-->
        <!--            </LinearLayout>-->

        <!--        </RelativeLayout>-->

        <!--        <include layout="@layout/view_partition" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="40sp" />
    </LinearLayout>
</ntou.project.djidrone.view.MyScrollView>